chore: add Git pre-commit hook with Husky for PHP syntax validation
- Install Husky and lint-staged for managing Git hooks
- Create pre-commit hook to check PHP syntax with php -l
- Use Docker-based PHP validation (php:7.4-cli) since PHP is not installed on host
- Add scripts/check-php-syntax-docker.js for Docker-based syntax checking
- Add scripts/check-php-syntax.js for direct PHP checking (requires PHP in PATH)
- Update README.md with development setup instructions
- Update .gitignore to exclude node_modules and npm artifacts

The hook prevents committing PHP files with parse errors while preserving
the intentional bad code patterns in this legacy demo project.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,11 @@ error_log
 vendor/
 composer.lock
 
+# Node.js
+node_modules/
+package-lock.json
+npm-debug.log*
+
 # Database
 *.sql.backup
 dump.sql
